--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://aavulavenkatesh797:7KkvTDs6WUlC@ep-green-lab-47976606.us-east-2.aws.neon.tech/Postgres?sslmode=require"
+DATABASE_URL=""
